--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>{{ title }}</h1>
+  <h1>Hello, {{ title }}</h1>
   <ul>
     <li *ngFor="let apartment of apartmentList">
       <h2>{{ apartment.apartment_name }}</h2>
