learning the ngrx effects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -333,4 +333,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
+<app-counter-output></app-counter-output>
+<app-counter-controls></app-counter-controls>
 <router-outlet />
