--- a/src/app/counter-output/counter-output.component.html
+++ b/src/app/counter-output/counter-output.component.html
@@ -1,2 +1,14 @@
 <p>counter-output works!</p>
-<p>{{ count$ | async }}</p>
+<!-- <p>{{ count$ | async }}</p> -->
+
+
+<div *ngIf = "error$ | async as error">{{error}}</div>
+
+<ul>
+    <li *ngFor = "let post of posts$ | async" >
+        <h3>{{post.title}}</h3>
+        <h3>{{post.body}}</h3>
+    </li>
+</ul>
+
+<button (click) = "onLoadPosts()" >Load Posts</button>
